// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post component Load normal post 1`] = `
<div
  className="PostContainer "
  onAnimationEnd={[Function]}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="Header"
  >
    <div
      className="Header-left"
    >
      <span
        aria-hidden={true}
        className="material-icons MuiIcon-root ReadIcon"
      >
        fiber_manual_record
      </span>
      <span
        className="Author"
        style={null}
      >
        author1
      </span>
    </div>
    <div
      className="Header-right"
    >
      <span
        className="CreatedAt"
      >
        4 days, 6 hours ago
      </span>
    </div>
  </div>
  <div
    className="Body"
  >
    <img
      className="Thumbnail Clickable"
      height={100}
      onClick={[Function]}
      src="/p1-thumb.jpg"
      width={100}
    />
    <span
      className="Title"
    >
      My new post 1
    </span>
  </div>
  <div
    className="Footer"
  >
    <div
      className="PostOptions"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained DismissButton MuiButton-containedSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "5px",
            "paddingBottom": "1px",
            "paddingTop": "1px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeSmall"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
              />
            </svg>
          </span>
          Dismiss
        </span>
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained SaveButton MuiButton-containedSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "5px",
            "paddingBottom": "1px",
            "paddingTop": "1px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeSmall"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm2 16H5V5h11.17L19 7.83V19zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zM6 6h9v4H6z"
              />
            </svg>
          </span>
          Save
        </span>
      </button>
    </div>
    <span
      className="CommentsNum"
    >
      1,230 comment/s
    </span>
  </div>
</div>
`;

exports[`Post component Load normal post 2 1`] = `
<div
  className="PostContainer "
  onAnimationEnd={[Function]}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="Header"
  >
    <div
      className="Header-left"
    >
      <span
        aria-hidden={true}
        className="material-icons MuiIcon-root ReadIcon"
      >
        fiber_manual_record
      </span>
      <span
        className="Author"
        style={null}
      >
        author1
      </span>
    </div>
    <div
      className="Header-right"
    >
      <span
        className="CreatedAt"
      >
        10 days ago
      </span>
    </div>
  </div>
  <div
    className="Body"
  >
    <img
      className="Thumbnail Clickable"
      height={100}
      onClick={[Function]}
      src="/p2-thumb.jpg"
      width={100}
    />
    <span
      className="Title"
    >
      My new post 2
    </span>
  </div>
  <div
    className="Footer"
  >
    <div
      className="PostOptions"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained DismissButton MuiButton-containedSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "5px",
            "paddingBottom": "1px",
            "paddingTop": "1px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeSmall"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
              />
            </svg>
          </span>
          Dismiss
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained SaveButton MuiButton-containedSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "5px",
            "paddingBottom": "1px",
            "paddingTop": "1px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeSmall"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm2 16H5V5h11.17L19 7.83V19zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zM6 6h9v4H6z"
              />
            </svg>
          </span>
          Save
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <span
      className="CommentsNum"
    >
      878 comment/s
    </span>
  </div>
</div>
`;

exports[`Post component Load post without picture 1`] = `
<div
  className="PostContainer "
  onAnimationEnd={[Function]}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="Header"
  >
    <div
      className="Header-left"
    >
      <span
        aria-hidden={true}
        className="material-icons MuiIcon-root ReadIcon"
      >
        fiber_manual_record
      </span>
      <span
        className="Author"
        style={null}
      >
        author2
      </span>
    </div>
    <div
      className="Header-right"
    >
      <span
        className="CreatedAt"
      >
        2 minutes ago
      </span>
    </div>
  </div>
  <div
    className="Body"
  >
    <span
      className="Title"
    >
      My new post 3
    </span>
  </div>
  <div
    className="Footer"
  >
    <div
      className="PostOptions"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained DismissButton MuiButton-containedSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "5px",
            "paddingBottom": "1px",
            "paddingTop": "1px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeSmall"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
              />
            </svg>
          </span>
          Dismiss
        </span>
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained SaveButton MuiButton-containedSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "5px",
            "paddingBottom": "1px",
            "paddingTop": "1px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeSmall"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm2 16H5V5h11.17L19 7.83V19zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zM6 6h9v4H6z"
              />
            </svg>
          </span>
          Save
        </span>
      </button>
    </div>
    <span
      className="CommentsNum"
    >
      900 comment/s
    </span>
  </div>
</div>
`;

exports[`Post component Press callbacks 1`] = `
<div
  className="PostContainer "
  onAnimationEnd={[Function]}
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="Header"
  >
    <div
      className="Header-left"
    >
      <span
        aria-hidden={true}
        className="material-icons MuiIcon-root ReadIcon"
      >
        fiber_manual_record
      </span>
      <span
        className="Author"
        style={null}
      >
        author3
      </span>
    </div>
    <div
      className="Header-right"
    >
      <span
        className="CreatedAt"
      >
        Seconds ago
      </span>
    </div>
  </div>
  <div
    className="Body"
  >
    <span
      className="Title"
    >
      My new post 4
    </span>
  </div>
  <div
    className="Footer"
  >
    <div
      className="PostOptions"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained DismissButton MuiButton-containedSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "5px",
            "paddingBottom": "1px",
            "paddingTop": "1px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeSmall"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
              />
            </svg>
          </span>
          Dismiss
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained SaveButton MuiButton-containedSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "fontSize": "12px",
            "marginRight": "5px",
            "paddingBottom": "1px",
            "paddingTop": "1px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeSmall"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm2 16H5V5h11.17L19 7.83V19zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zM6 6h9v4H6z"
              />
            </svg>
          </span>
          Save
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <span
      className="CommentsNum"
    >
      No comments
    </span>
  </div>
</div>
`;
